--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,15 +4,36 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".MainActivity">
-
-    <TextView
+    tools:context=".MainActivity"
+    android:padding="10sp"
+    >
+    <EditText
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:id="@+id/editTextTask"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toLeftOf="@id/addTaskBtn"
+        android:layout_marginTop="20sp"
+        android:hint="Add New Task"
+        android:layout_marginLeft="2sp"
+        />
+    <Button
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Hello World!"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
+        android:id="@+id/addTaskBtn"
+        android:text="add"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="@id/editTextTask"
+        app:layout_constraintBottom_toBottomOf="@id/editTextTask"
+        />
+    <androidx.recyclerview.widget.RecyclerView
+        android:layout_width="match_parent"
+        android:layout_height="0sp"
+        android:id="@+id/taskRecyclerView"
+        app:layout_constraintTop_toBottomOf="@id/editTextTask"
+        app:layout_constraintBottom_toBottomOf="parent"
+        android:layout_marginTop="15sp"
 
+        />
 </androidx.constraintlayout.widget.ConstraintLayout>
